@@ -1,5 +1,8 @@
 2006-12-18  Eric Hodel  <drbrain@segment7.net>
 
+	* lib/rubygems/gem_commands (Gem::OutdatedCommand): Add a way to see
+	which gems are out-of-date.
+
 	* setup.rb: Ignore errors for .config and InstalledFiles when
 	the source path is read-only/NFS.  Fixes bugs #1395 and #1374.  Patch
 	by Ryan Davis.
